# Pypeline

./: .gitignore  README.md  cache_tool.py  main.py  output.geojson  pyproject.toml  pytest.ini  satellite_map.html
src/: model.py
src/extract/: extractor.py
src/load/: geojson.py  loader.py
src/pipeline/: pipeline.py  stage.py
src/pipeline/stages/: apply_keras_sequential.py  extract_from_tensorflow.py  load_to_geojson.py  split_tf_dataset.py
src/transform/: transformer.py
src/utils/: __init__.py  cache_utils.py  model_cache.py
tests/: conftest.py
tests/pipeline/: __init__.py  test_pipeline.py  test_stage.py
tests/pipeline/stages/: __init__.py  test_apply_keras_sequential.py  test_extract_from_tensorflow.py  test_load_to_geojson.py  test_split_tf_dataset.py
tests/utils/: __init__.py  test_model_cache.py
